attempt to get avaje inject to compile correctly