@@ -8,7 +8,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>25</maven.compiler.source>
-    <maven.compiler.target>25</maven.compiler.target>
+    <maven.compiler.release>25</maven.compiler.release>
 
     <!--
       Make sure you upgrade the ebean-migration dependency as well.
@@ -16,7 +16,8 @@
     -->
     <ebean.version>17.4.0</ebean.version>
     <camel.version>4.10.2</camel.version>
-    <inject.version>12.0</inject.version>
+    <inject.version>12.5</inject.version>
+    <jsonb.version>3.7</jsonb.version>
   </properties>
 
   <repositories>
@@ -36,7 +37,7 @@
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
-      <version>2.1.210</version>
+      <version>2.2.220</version>
     </dependency>
     <dependency>
       <groupId>io.ebean</groupId>
@@ -70,13 +71,6 @@
       <version>${inject.version}</version>
     </dependency>
     <dependency>
-      <groupId>io.avaje</groupId>
-      <artifactId>avaje-inject-generator</artifactId>
-      <version>${inject.version}</version>
-      <scope>provided</scope>
-      <optional>true</optional>
-    </dependency>
-    <dependency>
       <groupId>org.codehaus.janino</groupId>
       <artifactId>janino</artifactId>
       <version>3.1.2</version>
@@ -95,12 +89,19 @@
     <dependency>
       <groupId>io.avaje</groupId>
       <artifactId>avaje-jsonb</artifactId>
-      <version>3.7</version>
+      <version>${jsonb.version}</version>
     </dependency>
     <dependency>
       <groupId>io.avaje</groupId>
       <artifactId>avaje-jsonb-generator</artifactId>
-      <version>3.7</version>
+      <version>${jsonb.version}</version>
+      <scope>provided</scope>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>io.avaje</groupId>
+      <artifactId>avaje-inject-generator</artifactId>
+      <version>${inject.version}</version>
       <scope>provided</scope>
       <optional>true</optional>
     </dependency>
@@ -123,22 +124,38 @@
       <version>3.3.0</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>io.avaje</groupId>
+      <artifactId>avaje-inject-test</artifactId>
+      <version>${inject.version}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.10.1</version>
         <configuration>
           <compilerArgs>
             <arg>-Xlint</arg>
+            <arg>-proc:full</arg>
           </compilerArgs>
           <annotationProcessorPaths>
             <path>
               <groupId>io.ebean</groupId>
               <artifactId>querybean-generator</artifactId>
               <version>${ebean.version}</version>
+            </path>
+            <path>
+              <groupId>io.avaje</groupId>
+              <artifactId>avaje-inject-generator</artifactId>
+              <version>${inject.version}</version>
+            </path>
+            <path>
+              <groupId>io.avaje</groupId>
+              <artifactId>avaje-jsonb-generator</artifactId>
+              <version>${jsonb.version}</version>
             </path>
           </annotationProcessorPaths>
         </configuration>
@@ -154,9 +171,6 @@
             <manifest>
               <mainClass>${exec.mainClass}</mainClass>
             </manifest>
-            <manifestEntries>
-              <Multi-Release>true</Multi-Release>
-            </manifestEntries>
           </archive>
         </configuration>
         <executions>
@@ -177,6 +191,21 @@
         <groupId>io.ebean</groupId>
         <artifactId>ebean-maven-plugin</artifactId>
         <version>${ebean.version}</version>
+        <extensions>true</extensions>
+      </plugin>
+      <plugin>
+        <groupId>io.avaje</groupId>
+        <artifactId>avaje-inject-maven-plugin</artifactId>
+        <version>${inject.version}</version>
+        <executions>
+          <execution>
+            <?m2e execute?>
+            <phase>process-sources</phase>
+            <goals>
+              <goal>provides</goal>
+            </goals>
+          </execution>
+        </executions>
         <extensions>true</extensions>
       </plugin>
     </plugins>
